Added image uploading. Preparing for carrierwave. Routing. Small code changes. Removed view specs

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,8 @@
 
 <p>
   <strong>Product img:</strong>
-  <%= @product.product_img %>
+  <%= image_tag @product.product_img %>
+  <%#= @product.product_img %>
 </p>
 
 <p>
