--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@product) do |f| %>
+<%#= form_for(@product) do |f| %>
+<%= form_for @product, :html => {:multipart => true} do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -21,7 +22,7 @@
   </div>
   <div class="field">
     <%= f.label :product_img %><br>
-    <%= f.text_field :product_img %>
+    <%= f.text :product_img %>
   </div>
   <div class="field">
     <%= f.label :price %><br>
