--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= product.title %></td>
         <td><%= product.description %></td>
-        <td><%= product.product_img %></td>
+        <td><%= image_tag product.product_img %></td>
         <td><%= product.price %></td>
         <td><%= product.year_published %></td>
         <td><%= link_to 'Show', product %></td>
