Removed carrierwave. Going to try paperclip

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
   <div class="field">
     <%= f.label :product_img %><br>
-    <%= f.text :product_img %>
+    <%= f.file_field :product_img %>
   </div>
   <div class="field">
     <%= f.label :price %><br>
