Added bootstrap and styling

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-  <strong>Product img:</strong>
+  <strong>Cover:</strong>
   <%= image_tag @product.product_img %>
   <%#= @product.product_img %>
 </p>
@@ -22,7 +22,7 @@
 </p>
 
 <p>
-  <strong>Year published:</strong>
+  <strong>Year Published:</strong>
   <%= @product.year_published %>
 </p>
 
