--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,13 +1,13 @@
-<h1>Listing products</h1>
+<h1>Catalogue</h1>
 
 <table>
   <thead>
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>Product img</th>
+      <th>Cover</th>
       <th>Price</th>
-      <th>Year published</th>
+      <th>Year Published</th>
       <th colspan="3"></th>
     </tr>
   </thead>
