More styling on function pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="/products">Books</a></li>
+          <li ><%= link_to 'New Product', new_product_path %></li>
         </ul>
       </div>
     </div>
