--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,31 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @product.title %>
-</p>
+<div class="row">
+  <div class="col-md-9">
+    <%= image_tag(@product.product_img, width: '100%') if @product.product_img.present? %>
+  </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
-
-<p>
-  <strong>Cover:</strong>
-  <%= image_tag @product.product_img %>
-  <%#= @product.product_img %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
-
-<p>
-  <strong>Year Published:</strong>
-  <%= @product.year_published %>
-</p>
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%#= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
-<%= link_to 'Back', products_path %>
+  <div class="col-md-3">
+    <p><b>Title: </b><%= @product.title %></p>
+    <p><b>Description: </b><%= @product.description %></p>
+    <p>
+      <%= link_to 'Edit', edit_product_path(@product) %> |
+      <%= link_to 'Destroy', @product, data: { confirm: 'Are you sure?' }, method: :delete %> |
+      <%= link_to 'Back', products_path %>
+    </p>
+  </div>
+</div>
