--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -33,6 +33,7 @@
     <%= f.select :year_published, (Time.zone.now.year - 100)..(Time.zone.now.year + 1) %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <button type="submit" class="btn btn-default">Submit</button>
+    <%#= f.submit %>
   </div>
 <% end %>
