--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,11 +24,26 @@
           <li class="active"><a href="/products">Books</a></li>
           <li ><%= link_to 'New Product', new_product_path %></li>
         </ul>
+        <p class="navbar-text pull-right">
+          <% if admin_signed_in? %>
+          Logged in as <strong><%= current_admin.email %></strong>.
+          <%= link_to 'Edit profile', edit_admin_registration_path, :class => 'navbar-link' %> |
+          <%= link_to "Logout", destroy_admin_session_path, method: :delete, :class => 'navbar-link'  %>
+          <% else %>
+          <%= link_to "Sign up", new_admin_registration_path, :class => 'navbar-link'  %> |
+          <%= link_to "Login", new_admin_session_path, :class => 'navbar-link'  %>
+          <% end %>
       </div>
     </div>
   </nav>
 
   <div class="container">
+    <% if notice %>
+    <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+    <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
     <%= yield %>
   </div>
 
